[package]
name = "tree-sitter-lsp-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
# Tree-sitter core
tree-sitter = "0.25"

# Common tree-sitter language parsers
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25.0"

# LSP client functionality
lsp-types = "0.97"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Regular expressions
regex = "1.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter-swift = "0.7.1"
tree-sitter-language = "0.1.5"
glob = "0.3.3"

[dev-dependencies]
tempfile = "3.23"
